      discriminator

    - Fixed bug which was preventing synonym() attributes from
      being used with inheritance

    - Session.execute can now find binds from metadata

    - Fixed "cascade delete" operation of dynamic relations, which
      had only been implemented for foreign-key nulling behavior
      in 0.4.2 and not actual cascading deletes [ticket:895]

- sql
    - 'name' is no longer a required constructor argument for
      Column().  It (and .key) may now be deferred until the column
      is added to a Table.

- extensions
    - The "synonym" function is now directly usable with
      "declarative".  Pass in the decorated property using the
      "instrument" keyword argument, e.g.: somekey =
      synonym('_somekey', instrument=property(g, s))

    - Declarative also gained @synonym_for(...) and
      @comparable_using(...), front-ends for synonym and
      comparable_property.

0.4.4
------
- sql
    - Can again create aliases of selects against textual FROM
      clauses, [ticket:975]

    - The value of a bindparam() can be a callable, in which
      case it's evaluated at statement execution time to get the
      value.

    - Added exception wrapping/reconnect support to result set
      fetching.  Reconnect works for those databases that raise
      a catchable data error during results (i.e. doesn't work
      on MySQL) [ticket:978]

    - Implemented two-phase API for "threadlocal" engine, via
      engine.begin_twophase(), engine.prepare() [ticket:936]

    - Fixed bug which was preventing UNIONS from being
      cloneable, [ticket:986]

    - Added "bind" keyword argument to insert(), update(),
      delete() and DDL(). The .bind property is now assignable
      on those statements as well as on select().

    - Insert statements can now be compiled with extra "prefix"
      words between INSERT and INTO, for vendor extensions like
      MySQL's INSERT IGNORE INTO table.

- orm